Navbar collapses correctly.

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -3,8 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .nav-container {
-  width: 290px;
+  width: 85%;
   margin: auto;
+  text-align: center;
 }
 
 .panel {
